# uniprot_lab

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
notebooks/: modify_test_data.ipynb  uniprot_import_to_neo4j.ipynb
src/uniprot/: import_neo4j.py  manager.py  models.py
tests/: test_uniprot.py
tests/data/: test_data.tsv  uniprot.ttl
