[project]
name = "uniprot"
version = "0.1.0"
description = ""
authors = [
    {name = "Lisa Krapp", email = "s6likrap@uni-bonn.de"},
]
dependencies = [
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "SQLAlchemy>=2.0.28",
    "rdflib-neo4j>=1.0",
    "neo4j>=5.18.0",
    "rdflib>=7.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest-cov>=5.0.0",
    "pytest>=8.1.1",
]
notebook = [
    "ipykernel>=6.29.3",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]